--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
   <body>
     <div class="main-container">
       <header>
-        <img src="/images/logo/Booki.png" alt="logo Booki" />
+        <!--
+à finir : mettre le logo à la bonne taille, ajouter les menus, un titre H2, un texte, le champ de recherche, les filtres, et un texte de description avec une icône Fontawesome
+-->
+        <img src="/images/logo/Booki@3x.png" alt="logo Booki" />
       </header>
       <main>
         <div class="hebergements-and-populaires">
