--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="main-container">
       <header>
         <!--
-à finir : mettre le logo à la bonne taille, ajouter les menus, un titre H2, un texte, le champ de recherche, les filtres, et un texte de description avec une icône Fontawesome
+à finir : mettre le logo à la bonne taille, ajouter les menus, un titre H2, un texte, le champ de recherche, les filtres, et un texte de description avec une icône Fontawesome.
 -->
         <img src="/images/logo/Booki@3x.png" alt="logo Booki" />
       </header>
