--- a/index.html
+++ b/index.html
@@ -24,10 +24,17 @@
     <div class="main-container">
       <header>
         <!--
-à finir : mettre le logo à la bonne taille, ajouter les menus, un titre H2, un texte, le champ de recherche, les filtres, et un texte de description avec une icône Fontawesome.
+à finir : mettre le logo à la bonne taille et bon padding, ajouter les menus, un titre H2, un texte, le champ de recherche, les filtres, et un texte de description avec une icône Fontawesome.
 -->
         <img id="logo" src="/images/logo/Booki@3x.png" alt="logo Booki" />
+        <nav>
+          <ul>
+            <li>Hébergements</li>
+            <li>Activités</li>
+          </ul>
+        </nav>
       </header>
+
       <main>
         <div class="hebergements-and-populaires">
           <section class="hebergements"></section>
