--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+    <script
+      src="https://kit.fontawesome.com/3c74274841.js"
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    ></script>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
@@ -28,16 +25,226 @@
 -->
         <img id="logo" src="/images/logo/Booki@3x.png" alt="logo Booki" />
         <nav>
-          <ul>
-            <li>Hébergements</li>
-            <li>Activités</li>
+          <ul class="menu-ul">
+            <li>
+              <a href="#" class="menu">Hébergements</a>
+            </li>
+            <li><a href="#" class="menu">Activités</a></li>
           </ul>
         </nav>
       </header>
 
+      <!-- Info box -->
+      <div class="recherche-filtre">
+        <!-- Headline -->
+        <div class="conteneur-headline">
+          <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+          <p>En plein centre-ville ou en pleine nature</p>
+        </div>
+        <!-- Barre de recherche -->
+        <div class="conteneur-recherche">
+          <div class="search-bar">
+            <button><i class="fas fa-map-marker-alt"></i></button>
+            <input type="text" placeholder="Marseille, France" />
+            <button>Rechercher</button>
+          </div>
+        </div>
+        <!-- Filtres -->
+        <div class="conteneur-filtres">
+          <h3>Filtres</h3>
+          <div class="boutons-filtre">
+            <button>
+              <i class="fa-solid fa-money-bill-wave"></i>
+              <h3>Économique</h3>
+            </button>
+            <button>
+              <i class="fa-solid fa-person"></i>
+              <h3>Familiale</h3>
+            </button>
+            <button>
+              <i class="fa-solid fa-heart"></i>
+              <h3>Romantique</h3>
+            </button>
+            <button>
+              <i class="fa-solid fa-fire"></i>
+              <h3>Nos pépites</h3>
+            </button>
+          </div>
+        </div>
+        <!-- Infobar -->
+        <div class="conteneur-informations">
+          <p>
+            <i class="fa-solid fa-info-circle"></i> Plus de 500 logements sont
+            disponibles dans cette ville
+          </p>
+        </div>
+      </div>
+
       <main>
         <div class="hebergements-and-populaires">
-          <section class="hebergements"></section>
+          <!-- Hébergements en chantier -->
+
+          <section class="hebergements">
+            <div class="hebergements-title">
+              <h2 class="section-title">Hébergements à Marseille</h2>
+            </div>
+            <div class="hebergements-cards">
+              <!-- Card 1 -->
+              <a href="#">
+                <article class="card">
+                  <img
+                    src="/images/hebergements/fred-kleber.jpg"
+                    alt="Image de l'hôtel du port"
+                    style="object-fit: cover"
+                  />
+                  <div class="card-content">
+                    <div class="card-txt">
+                      <h3 class="card-title">Hôtel du port</h3>
+                      <p class="card-subtitle">
+                        Nuit à partir de 52<span class="euro">€</span>
+                      </p>
+                    </div>
+                    <div class="card-rating">
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <span class="sr-only">Note de 4 sur 5</span>
+                    </div>
+                  </div>
+                </article>
+              </a>
+              <!-- Card 2 -->
+              <a href="#">
+                <article class="card">
+                  <img
+                    src="/images/hebergements/febrian-zakaria.jpg"
+                    alt="Image de l'hôtel Chez Amina"
+                    style="object-fit: cover"
+                  />
+                  <div class="card-content">
+                    <div class="card-txt">
+                      <h3 class="card-title">Hôtel Chez Amina</h3>
+                      <p class="card-subtitle">
+                        Nuit à partir de 96<span class="euro">€</span>
+                      </p>
+                    </div>
+                    <div class="card-rating">
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <span class="sr-only">Note de 4 sur 5</span>
+                    </div>
+                  </div>
+                </article>
+              </a>
+              <!-- Card 3 -->
+              <a href="#">
+                <article class="card">
+                  <img
+                    src="/images/hebergements/reisetopia.jpg"
+                    alt="Image de l'hôtel Les mouettes"
+                    style="object-fit: cover"
+                  />
+                  <div class="card-content">
+                    <div class="card-txt">
+                      <h3 class="card-title">Hôtel Les mouettes</h3>
+                      <p class="card-subtitle">
+                        Nuit à partir de 76<span class="euro">€</span>
+                      </p>
+                    </div>
+                    <div class="card-rating">
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <span class="sr-only">Note de 4 sur 5</span>
+                    </div>
+                  </div>
+                </article>
+              </a>
+              <!-- Card 4 -->
+              <a href="#">
+                <article class="card">
+                  <img
+                    src="/images/hebergements/annie-spratt.jpg"
+                    alt="Image de l'hôtel de la mer"
+                    style="object-fit: cover"
+                  />
+                  <div class="card-content">
+                    <div class="card-txt">
+                      <h3 class="card-title">Hôtel de la mer</h3>
+                      <p class="card-subtitle">
+                        Nuit à partir de 46<span class="euro">€</span>
+                      </p>
+                    </div>
+                    <div class="card-rating">
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <span class="sr-only">Note de 4 sur 5</span>
+                    </div>
+                  </div>
+                </article>
+              </a>
+              <!-- Card 5 -->
+              <a href="#">
+                <article class="card">
+                  <img
+                    src="/images/hebergements/marcus-loke.jpg"
+                    alt="Image de l'Auberge La Canebière"
+                    style="object-fit: cover"
+                  />
+                  <div class="card-content">
+                    <div class="card-txt">
+                      <h3 class="card-title">Auberge La Canebière</h3>
+                      <p class="card-subtitle">
+                        Nuit à partir de 25<span class="euro">€</span>
+                      </p>
+                    </div>
+                    <div class="card-rating">
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <span class="sr-only">Note de 4 sur 5</span>
+                    </div>
+                  </div>
+                </article>
+              </a>
+              <!-- Card 6 -->
+              <a href="#">
+                <article class="card">
+                  <img
+                    src="/images/hebergements/nicate-lee.jpg"
+                    alt="Image de l'Auberge Le Panier"
+                    style="object-fit: cover"
+                  />
+                  <div class="card-content">
+                    <div class="card-txt">
+                      <h3 class="card-title">Auberge Le Panier</h3>
+                      <p class="card-subtitle">
+                        Nuit à partir de 23<span class="euro">€</span>
+                      </p>
+                    </div>
+                    <div class="card-rating">
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <span class="sr-only">Note de 4 sur 5</span>
+                    </div>
+                  </div>
+                </article>
+              </a>
+            </div>
+            <a href="#" class="afficher-plus">Afficher plus</a>
+          </section>
+
+          <!-- Fin hébergement -->
+
           <section class="populaires">
             <div class="populaires-title">
               <h2 class="section-title">Les plus populaires</h2>
@@ -131,7 +338,38 @@
           </section>
         </div>
       </main>
-      <footer></footer>
+
+      <!--  ajout du footer             -->
+      <footer>
+        <div class="footer-content">
+          <div class="footer-menu">
+            <h3>À propos</h3>
+            <ul class="footer-col">
+              <li class="link-footer">
+                <a href="#">Fonctionnement du site</a>
+              </li>
+              <li class="link-footer"><a href="#">Conditions générales</a></li>
+              <li class="link-footer">
+                <a href="#">Données et confidentialité</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-menu">
+            <h3>Nos hébergements</h3>
+            <ul class="footer-col">
+              <li class="link-footer"><a href="#">Charte qualité</a></li>
+              <li class="link-footer"><a href="#">Proposer votre hôtel</a></li>
+            </ul>
+          </div>
+          <div class="footer-menu">
+            <h3>Assistance</h3>
+            <ul class="footer-col">
+              <li class="link-footer"><a href="#">Centre d'aide</a></li>
+              <li class="link-footer"><a href="#">Nous contacter</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
