Ajout des versions responsive
- ajout de la version tablette
- ajout de la version mobile
- correction de la partie desktop pour être responsive
- ajout du background lors du survol des boutons de filtres
- optimisation en cours du code
- et autres ajustements

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/css/style-tablet.css" media="screen and (max-width: 1024px)">
+    <link rel="stylesheet" href="/css/style-mobile.css" media="screen and (max-width: 767.98px)">
   </head>
 
   <body>
@@ -25,9 +27,9 @@
         <nav>
           <ul class="menu-ul">
             <li>
-              <a href="#" class="menu">Hébergements</a>
+              <a href="#" class="menu-nav">Hébergements</a>
             </li>
-            <li><a href="#" class="menu">Activités</a></li>
+            <li><a href="#" class="menu-nav">Activités</a></li>
           </ul>
         </nav>
       </header>
@@ -41,13 +43,17 @@
             <p>En plein centre-ville ou en pleine nature</p>
           </div>
           <!-- Barre de recherche -->
-          <div class="conteneur-recherche">
-            <div class="search-bar">
-              <button><i class="fas fa-map-marker-alt"></i></button>
-              <input type="text" placeholder="Marseille, France" />
-              <button>Rechercher</button>
-            </div>
-          </div>
+            <div class="conteneur-recherche">
+    <div class="search-bar">
+      <button><i class="fas fa-map-marker-alt"></i></button>
+      <input type="text" placeholder="Marseille, France" />
+      <button class="search-button">
+        <span class="search-text">Rechercher</span>
+        <i class="fas fa-search search-icon"></i> 
+      </button>
+    </div>
+  </div>
+  
           <!-- Filtres -->
           <div class="conteneur-filtres">
             <p class="big-text bold">Filtres</p>
@@ -72,8 +78,9 @@
           </div>
           <!-- Infobar -->
           <div class="conteneur-informations">
+            <i class="fa-solid fa-info-circle"></i>
             <p>
-              <i class="fa-solid fa-info-circle"></i> Plus de 500 logements sont
+             Plus de 500 logements sont
               disponibles dans cette ville
             </p>
           </div>
@@ -375,38 +382,39 @@
             </div>
           </div>
         </div>
-      
-
-      <!--  Footer  -->
-      <footer>
-          <div class="footer-menu">
-            <p class="big-text bold">À propos</p>
-            <ul class="footer-col">
-              <li class="link-footer">
-                <a href="#">Fonctionnement du site</a>
-              </li>
-              <li class="link-footer"><a href="#">Conditions générales</a></li>
-              <li class="link-footer">
-                <a href="#">Données et confidentialité</a>
-              </li>
-            </ul>
-          </div>
-          <div class="footer-menu">
-            <p class="big-text bold">Nos hébergements</p>
-            <ul class="footer-col">
-              <li class="link-footer"><a href="#">Charte qualité</a></li>
-              <li class="link-footer"><a href="#">Proposer votre hôtel</a></li>
-            </ul>
-          </div>
-          <div class="footer-menu">
-            <p class="big-text bold">Assistance</p>
-            <ul class="footer-col">
-              <li class="link-footer"><a href="#">Centre d'aide</a></li>
-              <li class="link-footer"><a href="#">Nous contacter</a></li>
-            </ul>
-          </div>
-      </footer>
+  
     </main>
+    <!--  Footer  -->
+    <footer>
+        <div class="footer-menu">
+          <p class="big-text bold">À propos</p>
+          <ul class="footer-col">
+            <li class="link-footer">
+              <a href="#">Fonctionnement du site</a>
+            </li>
+            <li class="link-footer"><a href="#">Conditions générales</a></li>
+            <li class="link-footer">
+              <a href="#">Données et confidentialité</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-menu">
+          <p class="big-text bold">Nos hébergements</p>
+          <ul class="footer-col">
+            <li class="link-footer"><a href="#">Charte qualité</a></li>
+            <li class="link-footer"><a href="#">Proposer votre hôtel</a></li>
+          </ul>
+        </div>
+        <div class="footer-menu">
+          <p class="big-text bold">Assistance</p>
+          <ul class="footer-col">
+            <li class="link-footer"><a href="#">Centre d'aide</a></li>
+            <li class="link-footer"><a href="#">Nous contacter</a></li>
+          </ul>
+        </div>
+    </footer>
     </div>
+
+           
   </body>
 </html>
