Corrections et optimisations

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Booki</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -15,8 +19,16 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="/css/style-tablet.css" media="screen and (max-width: 1024px)">
-    <link rel="stylesheet" href="/css/style-mobile.css" media="screen and (max-width: 767.98px)">
+    <link
+      rel="stylesheet"
+      href="/css/style-tablet.css"
+      media="screen and (max-width: 1024px)"
+    />
+    <link
+      rel="stylesheet"
+      href="/css/style-mobile.css"
+      media="screen and (max-width: 767.98px)"
+    />
   </head>
 
   <body>
@@ -43,46 +55,43 @@
             <p>En plein centre-ville ou en pleine nature</p>
           </div>
           <!-- Barre de recherche -->
-            <div class="conteneur-recherche">
-    <div class="search-bar">
-      <button><i class="fas fa-map-marker-alt"></i></button>
-      <input type="text" placeholder="Marseille, France" />
-      <button class="search-button">
-        <span class="search-text">Rechercher</span>
-        <i class="fas fa-search search-icon"></i> 
-      </button>
-    </div>
-  </div>
-  
+          <div class="conteneur-recherche">
+            <div class="search-bar">
+              <button><i class="fas fa-map-marker-alt"></i></button>
+              <input type="text" placeholder="Marseille, France" />
+              <button class="search-button">
+                <span class="search-text">Rechercher</span>
+                <i class="fas fa-search search-icon"></i>
+              </button>
+            </div>
+          </div>
+
           <!-- Filtres -->
           <div class="conteneur-filtres">
             <p class="big-text bold">Filtres</p>
             <div class="boutons-filtre">
               <button>
                 <i class="fa-solid fa-money-bill-wave"></i>
-                <p class=" bold">Économique</p>
+                <span class="bold">Économique</span>
               </button>
               <button>
                 <i class="fa-solid fa-person"></i>
-                <p class=" bold">Familiale</p>
+                <span class="bold">Familiale</span>
               </button>
               <button>
                 <i class="fa-solid fa-heart"></i>
-                <p class=" bold">Romantique</p>
+                <span class="bold">Romantique</span>
               </button>
               <button>
                 <i class="fa-solid fa-fire"></i>
-                <p class=" bold">Nos pépites</p>
+                <span class="bold">Nos pépites</span>
               </button>
             </div>
           </div>
           <!-- Infobar -->
           <div class="conteneur-informations">
             <i class="fa-solid fa-info-circle"></i>
-            <p>
-             Plus de 500 logements sont
-              disponibles dans cette ville
-            </p>
+            <p>Plus de 500 logements sont disponibles dans cette ville</p>
           </div>
         </div>
 
@@ -95,8 +104,8 @@
             </div>
             <div class="hebergements-cards">
               <!-- Card 1 -->
-              <a href="#"class="cards-prop">
-                <article class="card">
+              <a href="#" class="cards-prop">
+                <div class="card">
                   <img
                     src="/images/hebergements/fred-kleber.jpg"
                     alt="Image de l'hôtel du port"
@@ -117,11 +126,11 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </article>
+                </div>
               </a>
               <!-- Card 2 -->
               <a href="#" class="cards-prop">
-                <article class="card">
+                <div class="card">
                   <img
                     src="/images/hebergements/febrian-zakaria.jpg"
                     alt="Image de l'hôtel Chez Amina"
@@ -142,11 +151,11 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </article>
+                </div>
               </a>
               <!-- Card 3 -->
               <a href="#" class="cards-prop">
-                <article class="card">
+                <div class="card">
                   <img
                     src="/images/hebergements/reisetopia.jpg"
                     alt="Image de l'hôtel Les mouettes"
@@ -167,11 +176,11 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </article>
+                </div>
               </a>
               <!-- Card 4 -->
-              <a href="#"class="cards-prop">
-                <article class="card">
+              <a href="#" class="cards-prop">
+                <div class="card">
                   <img
                     src="/images/hebergements/annie-spratt.jpg"
                     alt="Image de l'hôtel de la mer"
@@ -192,11 +201,11 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </article>
+                </div>
               </a>
               <!-- Card 5 -->
-              <a href="#"class="cards-prop">
-                <article class="card">
+              <a href="#" class="cards-prop">
+                <div class="card">
                   <img
                     src="/images/hebergements/marcus-loke.jpg"
                     alt="Image de l'Auberge La Canebière"
@@ -217,11 +226,11 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </article>
+                </div>
               </a>
               <!-- Card 6 -->
-              <a href="#"class="cards-prop">
-                <article class="card">
+              <a href="#" class="cards-prop">
+                <div class="card">
                   <img
                     src="/images/hebergements/nicate-lee.jpg"
                     alt="Image de l'Auberge Le Panier"
@@ -242,7 +251,7 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </article>
+                </div>
               </a>
             </div>
             <p class="bold big-text afficher-plus">
@@ -261,7 +270,7 @@
             </div>
             <div class="populaires-cards">
               <a href="#">
-                <article class="card">
+                <div class="card">
                   <img
                     src="./images/hebergements/emile-guillemot.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
@@ -285,10 +294,10 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </article>
+                </div>
               </a>
               <a href="#">
-                <article class="card">
+                <div class="card">
                   <img
                     src="./images/hebergements/aw-creative.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
@@ -314,10 +323,10 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </article>
+                </div>
               </a>
               <a href="#">
-                <article class="card">
+                <div class="card">
                   <img
                     src="./images/hebergements/febrian-zakaria2.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit"
@@ -341,7 +350,7 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </article>
+                </div>
               </a>
             </div>
           </section>
@@ -357,7 +366,7 @@
                 src="/images/activites/reno-laithienne.jpg"
                 alt="Vieux-Port"
               />
-              <div class="card-text bold">Vieux-Port</p></div>
+              <div class="card-text bold">Vieux-Port</div>
             </div>
             <div class="card-activites">
               <img
@@ -382,10 +391,9 @@
             </div>
           </div>
         </div>
-  
-    </main>
-    <!--  Footer  -->
-    <footer>
+      </main>
+      <!--  Footer  -->
+      <footer>
         <div class="footer-menu">
           <p class="big-text bold">À propos</p>
           <ul class="footer-col">
@@ -412,9 +420,7 @@
             <li class="link-footer"><a href="#">Nous contacter</a></li>
           </ul>
         </div>
-    </footer>
+      </footer>
     </div>
-
-           
   </body>
 </html>
